contact details updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -143,15 +143,12 @@
                   <h2>+91 9159088617</h2>
               </div>
               <div class="flex gap-2 items-center mt-1 " >
-                  <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i> MIG-280, Tamil University,<br>Sindhamani,<br>MC Road,Thanjavur-613 010.</h2>
-               </div>
-               <div class="flex gap-2 items-center mt-1 " >
-                <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i> 141, Sethilal Nagar,<br>Karaikal-609 602.</h2>
+                <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i>147, Marriamman Kovil Street,  <br>Manojipatti Rd, Thanjavur,<br>Tamil Nadu 613004</h2>
              </div>
-               <div class="flex gap-2 items-center mt-1 " >
-                <i class="fa-solid fa-envelope fa-sm" style="color: #ffffff;"></i>
-                   <h2>scalarcodeinnovations@gmail.com</h2>
-               </div>
+             <div class="flex gap-2 items-center mt-1 " >
+              <i class="fa-solid fa-envelope fa-sm" style="color: #ffffff;"></i>
+                 <h2>info@rvndrinks.com</h2>
+             </div>
             </div>
             </div>
             
