--- a/contactus.html
+++ b/contactus.html
@@ -60,19 +60,20 @@
                 <h2 class="text-3xl font-semibold text-gray-800 mb-4">Get in Touch</h2>
                 <p class="text-gray-600 mb-6">We'd love to hear from you! Reach out to us using the details below.</p>
                 <div class="space-y-4">
-                    <p class="flex items-center text-gray-700"><span class="font-bold">📍 Address:</span> 123, Vallam, Thanjavur</p>
+                    <p class="flex items-center text-gray-700"><span class="font-bold">📍 Address:</span>147, Marriamman Kovil Street, Manojipatti Rd, Thanjavur, TamilNadu 613004</p>
                     <p class="flex items-center text-gray-700"><span class="font-bold">📞 Phone:</span> +91 98765 43210</p>
-                    <p class="flex items-center text-gray-700"><span class="font-bold">✉ Email:</span> contact@rvndrinks.com</p>
+                    <p class="flex items-center text-gray-700"><span class="font-bold">✉ Email:</span> info@rvndrinks.com</p>
                     <p class="flex items-center text-gray-700"><span class="font-bold">⏰ Working Hours:</span> Mon-Sat: 9:00 AM - 6:00 PM</p>
                 </div>
             </div>
             <!-- Map Section -->
             <div class="w-full lg:w-1/2">
                 <iframe 
-                    class="w-full h-96 lg:h-full"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.907938823478!2d-122.41941568468117!3d37.7749292797591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064df5b088b%3A0xa98c2c4f7f0df508!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1630294479634!5m2!1sen!2sin"
-                    allowfullscreen=""
-                    loading="lazy">
+                class="w-full h-96 lg:h-full"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.614805851885!2d79.09780549999999!3d10.764140799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baabfb05c8a6e8f%3A0x85a9b91050d2fef2!2s777%20Softdrinks!5e0!3m2!1sen!2sin!4v1741574846371!5m2!1sen!2sin" 
+                 allowfullscreen="" 
+                 loading="lazy" 
+                 referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
         </div>
@@ -107,15 +108,12 @@
                   <h2>+91 9159088617</h2>
               </div>
               <div class="flex gap-2 items-center mt-1 " >
-                  <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i> MIG-280, Tamil University,<br>Sindhamani,<br>MC Road,Thanjavur-613 010.</h2>
-               </div>
-               <div class="flex gap-2 items-center mt-1 " >
-                <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i> 141, Sethilal Nagar,<br>Karaikal-609 602.</h2>
+                <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i>147, Marriamman Kovil Street,  <br>Manojipatti Rd, Thanjavur,<br>Tamil Nadu 613004</h2>
              </div>
-               <div class="flex gap-2 items-center mt-1 " >
-                <i class="fa-solid fa-envelope fa-sm" style="color: #ffffff;"></i>
-                   <h2>scalarcodeinnovations@gmail.com</h2>
-               </div>
+             <div class="flex gap-2 items-center mt-1 " >
+              <i class="fa-solid fa-envelope fa-sm" style="color: #ffffff;"></i>
+                 <h2>info@rvndrinks.com</h2>
+             </div>
             </div>
             </div>
             
