contact links updated

--- a/products.html
+++ b/products.html
@@ -222,19 +222,19 @@
                 <h2 class="font-bold ">Contact Details</h2>
                 <div class="flex gap-2 items-center mt-1 " >
                     <i class="fa-solid fa-phone fa-sm" style="color: #ffffff;"></i>
-                    <h2>+91 9095796142</h2>
+                    <h2>+91 7708228777</h2>
                 </div>
               <div class="flex gap-2 items-center mt-1 " >
                   <i class="fa-solid fa-phone fa-sm" style="color: #ffffff;"></i>
-                  <h2>+91 9159088617</h2>
+                  <h2>+91 9443124777</h2>
               </div>
               <div class="flex gap-2 items-center mt-1 " >
-                <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i>147, Marriamman Kovil Street,  <br>Manojipatti Rd, Thanjavur,<br>Tamil Nadu 613004</h2>
-             </div>
-             <div class="flex gap-2 items-center mt-1 " >
-              <i class="fa-solid fa-envelope fa-sm" style="color: #ffffff;"></i>
-                 <h2>info@rvndrinks.com</h2>
-             </div>
+                  <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i>147, Marriamman Kovil Street,  <br>Manojipatti Rd, Thanjavur,<br>Tamil Nadu 613004</h2>
+               </div>
+               <div class="flex gap-2 items-center mt-1 " >
+                <i class="fa-solid fa-envelope fa-sm" style="color: #ffffff;"></i>
+                   <h2>info@rvndrinks.com</h2>
+               </div>
             </div>
             </div>
             
@@ -242,10 +242,9 @@
              <div class="flex flex-col gap-8">
                 <h2 class="font-bold">Follow Us On</h2>
                 <div class="flex gap-6">
-                    <i class="fa-brands fa-youtube fa-lg" style="color: #ffffff;"></i>
-                    <i class="fa-brands fa-instagram fa-lg" style="color: #ffffff;"></i>
-                    <i class="fa-brands fa-linkedin fa-lg" style="color: #ffffff;"></i>
-                    <i class="fa-brands fa-whatsapp fa-lg" style="color: #ffffff;"></i>
+                    <a href="https://www.facebook.com/share/1B4byMiDuo/?mibextid=wwXIfr"><i class="fa-brands fa-square-facebook fa-lg " style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/777softdrinks?igsh=bnMxaXRnZm5rejh1"><i class="fa-brands fa-instagram fa-lg" style="color: #ffffff;"></i></a>
+                    <a href="https://x.com/777softdrinks"><i class="fa-brands fa-x-twitter fa-lg" style="color: #ffffff;"></i></a>
                 </div>
              </div>
         </div>
