--- a/products.html
+++ b/products.html
@@ -222,11 +222,11 @@
                 <h2 class="font-bold ">Contact Details</h2>
                 <div class="flex gap-2 items-center mt-1 " >
                     <i class="fa-solid fa-phone fa-sm" style="color: #ffffff;"></i>
-                    <h2>+91 7708228777</h2>
+                    <h2><a href="tel:+91 7708228777">+91 7708228777</a></h2>
                 </div>
               <div class="flex gap-2 items-center mt-1 " >
                   <i class="fa-solid fa-phone fa-sm" style="color: #ffffff;"></i>
-                  <h2>+91 9443124777</h2>
+                  <h2><a href="tel:+91 9443124777">+91 9443124777</a></h2>
               </div>
               <div class="flex gap-2 items-center mt-1 " >
                   <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i>147, Marriamman Kovil Street,  <br>Manojipatti Rd, Thanjavur,<br>Tamil Nadu 613004</h2>
