--- a/contactus.html
+++ b/contactus.html
@@ -61,7 +61,7 @@
                 <p class="text-gray-600 mb-6">We'd love to hear from you! Reach out to us using the details below.</p>
                 <div class="space-y-4">
                     <p class="flex items-center text-gray-700"><span class="font-bold">📍 Address:</span>147, Marriamman Kovil Street, Manojipatti Rd, Thanjavur, TamilNadu 613004</p>
-                    <p class="flex items-center text-gray-700"><span class="font-bold">📞 Phone:</span> +91 98765 43210</p>
+                    <p class="flex items-center text-gray-700"><span class="font-bold">📞 Phone:</span> <a href="tel:+91 7708228777">+91 7708228777</a></p>
                     <p class="flex items-center text-gray-700"><span class="font-bold">✉ Email:</span> info@rvndrinks.com</p>
                     <p class="flex items-center text-gray-700"><span class="font-bold">⏰ Working Hours:</span> Mon-Sat: 9:00 AM - 6:00 PM</p>
                 </div>
@@ -102,11 +102,11 @@
                 <h2 class="font-bold ">Contact Details</h2>
                 <div class="flex gap-2 items-center mt-1 " >
                     <i class="fa-solid fa-phone fa-sm" style="color: #ffffff;"></i>
-                    <h2>+91 7708228777</h2>
+                    <h2><a href="tel:+91 7708228777">+91 7708228777</a></h2>
                 </div>
               <div class="flex gap-2 items-center mt-1 " >
                   <i class="fa-solid fa-phone fa-sm" style="color: #ffffff;"></i>
-                  <h2>+91 9443124777</h2>
+                  <h2><a href="tel:+91 9443124777">+91 9443124777</a></h2>
               </div>
               <div class="flex gap-2 items-center mt-1 " >
                   <h2><i class="fa-solid fa-location-dot fa-sm" style="color: #ffffff;"></i>147, Marriamman Kovil Street,  <br>Manojipatti Rd, Thanjavur,<br>Tamil Nadu 613004</h2>
